fix: change overflow to allow scroll

--- a/1_rockpaperscissors/src/App.css
+++ b/1_rockpaperscissors/src/App.css
@@ -50,9 +50,9 @@
 html, body {
     margin: 0;
     padding: 0;
-    width: 100vh;
+    width: 100vw;
     height: 100vh;
-    overflow-y:overflow;
+    overflow-y:auto;
 }
 
 /* 배경을 꽉 채우기 */
